Add some components

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <header>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <h1 class="navbar-brand d-flex align-items-center">
+                    <strong>Movieflix</strong>
+                </h1>
+            </div>
+        </div>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
