--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <div class="navbar navbar-dark bg-dark shadow-sm">
-            <div class="container d-flex justify-content-between">
-                <h1 class="navbar-brand d-flex align-items-center">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
                     <strong>Movieflix</strong>
-                </h1>
+                </a>
             </div>
         </div>
     </header>
